fix: star animation height fixed so we do not get weird overflow behaviour

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -30,6 +30,12 @@
 }
 
 @layer base {
+  html,
+  body {
+    margin: 0;
+    height: 100vh;
+  }
+
   h1 {
     @apply pb-6 text-2xl font-bold font-afterAllRegular tracking-wide md:text-6xl;
   }
